--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
   </div>
 
   <div class="info">
-    <p><strong>Contract Address (CA):</strong> <br> <code>AmkMDveyBhASNJx41vP1f3iNoqtTAwP2xsaRwgAjwoib</code></p>
+    <p><strong>Contract Address (CA):</strong> <br> <code style="font-size: 0.7em;">AmkMDveyBhASNJx41vP1f3iNoqtTAwP2xsaRwgAjwoib</code>
+</p><br><br>
     <p><a href="https://dexscreener.com/solana/7kfkhm9n4f2fftit8ktcv7pxjjuixca39llem5reaftb" target="_blank">📈 View on DEXScreener</a></p>
     <p><a href="https://t.me/asukabyveniceai" target="_blank">👾 Join Telegram</a></p>
   </div>
