--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </p>
     <div class="asuka-img">
       <div class="black-sun"></div>
-      <img src="sukk.jpg" alt="Asuka">
+      <img src="assuka.jpg" alt="Asuka">
     </div>
   </div>
 
